--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.14.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-react": "^6.9.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
