--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "csscomb": "^4.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-modal": "^1.7.7",
@@ -11,11 +12,11 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.14.0",
     "eslint-plugin-babel": "^4.0.1",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-react": "^6.9.0",
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
