--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "Fork, clone, npm i, npm start",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jflores353/advanced-redux-actions-practice.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jflores353/advanced-redux-actions-practice/issues"
+  },
+  "homepage": "https://github.com/jflores353/advanced-redux-actions-practice#readme"
 }
