--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-modal": "^1.7.7",
